# vayou-desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  dev.bat  package.json  pnpm-lock.yaml  run-release.bat  vite.config.js
.claude/: settings.json
.github/workflows/: release.yml
scripts/: gen_file_icons.py  gen_nsis_images.py
src/: app.css  app.html
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  opensubtitles.rs  playback.rs  tracks.rs  translate.rs  update.rs
src-tauri/src/mpv/: events.rs  ffi.rs  player.rs  types.rs
src-tauri/src/services/: mod.rs  opensubtitles.rs  playback.rs  settings.rs  subtitle_extract.rs  tracks.rs  translate.rs  update.rs
src-tauri/src/state/: mod.rs
src/lib/: icons.ts
src/lib/bindings/: opensubtitles.ts  playback.ts  tracks.ts  translate.ts  update.ts
src/lib/components/: AudioPanel.svelte  ContextMenu.svelte  MediaInfoPanel.svelte  OptionsDialog.svelte  PlaylistPanel.svelte  SeekBar.svelte  Select.svelte  SettingRow.svelte  SettingsPanel.svelte  SubtitlePanel.svelte  TitleBar.svelte  Toast.svelte  VideoControls.svelte  VolumeOsd.svelte  VolumeSlider.svelte
src/lib/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
src/lib/stores/: abLoop.svelte.ts  player.svelte.ts  settings.svelte.ts  sleepTimer.svelte.ts  toast.svelte.ts  translate.svelte.ts
src/lib/utils/: lang-names.ts  track-label.ts
src/routes/: +page.svelte
