[package]
name = "vayou-desktop"
version = "0.1.1"
description = "Vayou — Ultra-performant video player"
edition = "2021"

[lib]
name = "vayou_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
flate2 = "1"
tokio = { version = "1", features = ["time", "process"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = "s"
